[package]
name = "rlua-userdata-derive"
version = "0.1.0"
edition = "2018"

authors = ["gamma-delta"]
license = "MIT"
description = "Derive UserData for your structs and access their fields in rlua"
homepage = "https://github.com/gamma-delta/rlua-userdata-derive"
repository = "https://github.com/gamma-delta/rlua-userdata-derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# there must be a better way to do this but I just comment out 
# things for local testing

rud-proc-macro = {git = "https://github.com/gamma-delta/rud-proc-macro"}
rud-internal = {git = "https://github.com/gamma-delta/rud-internal"}

# rud-proc-macro = {path = "../rud-proc-macro"}
# rud-internal = {path = "../rud-internal"}

rlua = {git = "https://github.com/gamma-delta/rlua-arcmux-userdata"}
